--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROMARY RESTAURANT</title>
+    <link href="style.css" rel="stylesheet" />
+    <title>ROMERY RESTAURANT</title>
 </head>
+
 <body>
-    
-    
+
+    <div class="topnav">
+        <a href="#home" class="active">ROMERY</a>
+
+        <div id="myLinks">
+            <a href="#news">About us</a>
+            <a href="#contact">Menu</a>
+            <a href="#about">Contact</a>
+        </div>
+
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa-solid fa-bars"></i>
+        </a>
+    </div>
+
+
 </body>
+
 </html>
