--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
     <title>ROMERY RESTAURANT</title>
 </head>
 
-<body>
+<body></body>
+<div class="topnav">
+    <a href="#home" class="active">ROMERY</a>
 
-    <div class="topnav">
-        <a href="#home" class="active">ROMERY</a>
-
-        <div id="myLinks">
-            <a href="#news">About us</a>
-            <a href="#contact">Menu</a>
-            <a href="#about">Contact</a>
-        </div>
-
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa-solid fa-bars"></i>
-        </a>
+    <div id="myLinks">
+        <a href="#news">About us</a>
+        <a href="#contact">Menu</a>
+        <a href="#about">Contact</a>
     </div>
+
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa-solid fa-bars" style="color: #de9c52;"></i>
+    </a>
+</div>
 
 
 </body>
