Co-authored-by: R-Ztr <R-Ztr@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>ROMERY RESTAURANT</title>
 </head>
 
-<body></body>
+<body>
 <div class="topnav">
-    <a href="#home" class="active">ROMERY</a>
+    <a href="#home" class="active"><img></a>
 
     <div id="myLinks">
         <a href="#news">About us</a>
