--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-    <script src="script.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" />
-    <title>ROMERY RESTAURANT</title>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles.css" rel="stylesheet" />
+  <title>ROMERY restaurant</title>
 </head>
 
 <body>
-<div class="topnav">
-    <a href="#home" class="active"><img></a>
 
-    <div id="myLinks">
-        <a href="#news">About us</a>
-        <a href="#contact">Menu</a>
-        <a href="#about">Contact</a>
-    </div>
+  <nav id="nav" class="active">
+    <h3><a href="index.html"><img src="/img/logo_test-removebg.png"></a></h3>
+    <ul>
+      <li>
+        <a href="#">Menu</a>
+      </li>
+      <li>
+        <a href="#">About us</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+    </ul>
+    <div id="icons"></div>
+  </nav>
 
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa-solid fa-bars" style="color: #de9c52;"></i>
-    </a>
-</div>
 
-
+  <script src="script.js"></script>
 </body>
 
 </html>
