Mondif css + html

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-
-  <nav id="nav" class="active">
-    <h3><a href="index.html"><img src="/img/logo_test-removebg.png"></a></h3>
-    <ul>
-      <li>
-        <a href="#">Menu</a>
-      </li>
-      <li>
-        <a href="#">About us</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
-      </li>
-    </ul>
-    <div id="icons"></div>
-  </nav>
-
+  <header>
+    <nav id="nav" class="active">
+      <h3><a href="index.html"><img src="/img/logo_test-removebg.png"></a></h3>
+      <ul>
+        <li>
+          <a href="#">Menu</a>
+        </li>
+        <li>
+          <a href="#">About us</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+      <div id="icons"></div>
+    </nav>
+  </header>
 
   <script src="script.js"></script>
 </body>
