--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles.css" rel="stylesheet" />
+  <link rel="icon" type="image/gif" href="favicon1.png" />
   <title>ROMERY</title>
 </head>
 
