--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#nav">Menu</a>
         </li>
         <li>
-          <a href="#aboutus">Nos informations</a>
+          <a href="#aboutus">A propos de nous</a>
         </li>
         <li>
           <a href="#">Contact</a>
