Modif form final

--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1>Formulaire de réclamation</h1>
+        <h1>Formulaire de réservation</h1>
         <img src="images/romery.png" alt="Logo du restaurant ROMERY">
     </header>
 
