petites modifs ordre menu

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <header>
     <nav id="nav" class="active">
       <h3><a href="index.html"><img src="./img/logo_test-removebg.png"></a></h3>
-      <ul>
-        <li>
-          <a href="#nav">Menu</a>
-        </li>
+      <ul>    
         <li>
           <a href="#aboutus">A propos de nous</a>
+        </li>
+        <li>
+          <a href="#">Menu</a>
         </li>
         <li>
           <a href="#">Contact</a>
