--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <header>
-    <nav id="nav" class="active">
+    <nav id="nav" class="">
       <h3><a href="index.html"><img src="./img/logo_test-removebg.png"></a></h3>
-      <ul>    
+      <ul>
         <li>
           <a href="#aboutus">A propos de nous</a>
         </li>
@@ -79,6 +79,19 @@
       <!-- Indicateurs de slide -->
       <div class="slide-indicators"></div>
     </div>
+
+    <div>
+      <!-- BEST SELLERS -->
+    </div>
+
+    <div>
+      <!-- MENU -->
+    </div>
+
+    <div>
+      <!-- CONTACT -->
+    </div>
+
   </main>
   <script src="script.js"></script>
 
