Create form and dishes menu

--- a/index.html
+++ b/index.html
@@ -9,75 +9,211 @@
 </head>
 
 
-<!-- Page pour la partie best seller ! on doit voir si on la mélange avec la page qui existe deja de la nav bar, ou si on garde plusieurs
-page différentes qu'on utiliseras avec des liens-->
+<!-- Page pour le menu ! -->
 
 
 <body>
 
     <div>
-        <h3>Nos best sellers</h3>
+        <h1>Notre menu</h1>
     </div>
+    <div>
+        <img class="logo-menu" src="./Images/MENU.png" alt="Logo du restaurant" />
+    </div>
+
 
     <div class="cards-container">
-        <div class="card">
-            <img class="recto" src="./Images/neugetsse.png" alt="Nos neugetsse du chef">
-            <div class="verso">
-                <h4>Neugètsse</h4>
-                <div class="details">
-                    <div class="description">
-                        À la lueur des étoiles, nous vous convions à une expérience culinaire rare et exquise.
-                        Nos Neugètsse, préparé avec une précision artisanale et des ingrédients d'une qualité
-                        inégalée,
-                        vous transportera dans un voyage gustatif sans précédent.
-                        Laissez-vous séduire par la subtilité des saveurs,
-                        l'harmonie des textures et l'élégance de chaque bouchée.
-                        Découvrez l'exception incarnée dans chaque assiette,
-                        une ode à la gastronomie qui éveillera vos sens et nourrira votre âme.
+        <div class="mealType">
+            <h2>Entrées</h2>
+            <div class="card">
+                <img class="recto" src="./Images/neugetsse.png" alt="Photo de Noeuguettes de Saint-Jacques">
+                <div class="verso">
+                    <h3>Noeuguettes de Saint-Jacques</h3>
+                    <div class="details">
+                        <div class="description">
+                            Noeuguettes de Saint-Jacques : Coquilles Saint-Jacques délicatement hachées, enrobées d'une
+                            fine
+                            panure de panko et de
+                            zestes de citron, servies avec une émulsion de coriandre et une pointe de piment doux.
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="card">
+                <img class="recto" src="./Images/shooter.png" alt="Photo de Velouté de potimarron en shooter">
+                <div class="verso">
+                    <h3>Velouté de potimarron en shooter</h3>
+                    <div class="details">
+                        <div class="description">
+                            Velouté de potimarron en shooter : Soupe onctueuse parfumée au gingembre, accompagnée de
+                            mini
+                            croûtons dorés au
+                            beurre.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="recto" src="./Images/tacoscanard.png" alt="Phot de Taquausse de magret de canard">
+                <div class="verso">
+                    <h3>Taquausse de magret de canard</h3>
+                    <div class="details">
+                        <div class="description">
+                            Taquausse de magret de canard : Tranches de magret de canard fumé, salade roquette, compotée
+                            d'oignons rouges et
+                            fromage de chèvre dans un wrap moelleux et croustillant.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mealType">
+            <h2>Plats</h2>
+            <div class="card">
+                <img class="recto" src="./Images/bouchee.png"
+                    alt="Photo Burjé élégance avec ses frites de Patate Douce au Parmesan ">
+                <div class="verso">
+                    <h3>Burjé élégance </h3>
+                    <div class="details">
+                        <div class="description">
+                            Burjé élégance avec ses frites de Patate Douce au Parmesan : Buns briochés maison, steak de
+                            bœuf
+                            Wagyu, assaisonné avec
+                            des câpres, des échalotes françaises, du persil frais et une pointe de moutarde à
+                            l'ancienne.
+                            Frites saupoudrées de
+                            parmesan fraîchement râpé et de persil haché. Accompagnées d'un aioli à la
+                            truffe et d'une gelée de piment doux.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="recto" src="./Images/anaconda.png" alt="Photo de Kebab de Filet Mignon">
+                <div class="verso">
+                    <h3>Kebab de Filet Mignon</h3>
+                    <div class="details">
+                        <div class="description">
+                            Kebab de Filet Mignon : Filet mignon de porc mariné dans des épices douces, grillé à la
+                            perfection, servi dans un pain maison avec une salade de chou à la crème fraîche et à
+                            l'aneth,
+                            et une touche de sauce tzatziki.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="recto" src="./Images/cavza.png" alt="Photo de Pizza au caviar ">
+                <div class="verso">
+                    <h3>Pizza au caviar</h3>
+                    <div class="details">
+                        <div class="description">
+                            Pizza au caviar : Base crémeuse à la crème fraîche, oignons nouveaux, saumon fumé, et une
+                            généreuse portion de
+                            caviar. Finie avec un filet de citron et d'aneth.
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mealType">
+            <h2>Desserts</h2>
+            <div class="card">
+                <img class="recto" src="./Images/churros.png" alt="Phot de Churros au chocolat noir et fleur de sel">
+                <div class="verso">
+                    <h3>Churros au chocolat noir et fleur de sel</h3>
+                    <div class="details">
+                        <div class="description">
+                            Churros au chocolat noir et fleur de sel : Churros croustillants saupoudrés de sucre, servis
+                            avec une sauce au
+                            chocolat noir corsé et une pincée de fleur de sel.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="recto" src="./Images/sunday.png" alt="Photo de Sundae de macaron">
+                <div class="verso">
+                    <h3>Sundae de macaron</h3>
+                    <div class="details">
+                        <div class="description">
+                            Sundae de macaron : Glace vanille, éclats de macarons colorés, sauce caramel beurre salé et
+                            éclats de pralin.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="recto" src="./Images/tirmoidessus.png" alt="Photo de Tarte au Daim revisité">
+                <div class="verso">
+                    <h3>Tarte au Daim revisité</h3>
+                    <div class="details">
+                        <div class="description">
+                            Tarte au Daim revisité : Base sablée croquante, une couche crémeuse de caramel au beurre
+                            salé,
+                            morceaux de Daim
+                            concassés, surmontée d'une mousse légère au chocolat et de copeaux de Daim croustillants.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mealType">
+            <h2>Vins</h2>
+            <div class="card">
+                <img class="recto" src="./Images/vinbet.png" alt="Photo d'une bouteille de vin Pétillant de Betterave ">
+                <div class="verso">
+                    <h3>Pétillant de Betterave </h3>
+                    <div class="details">
+                        <div class="description">
+                            Pétillant de Betterave : Un vin effervescent d'une teinte rosée profonde, élaboré à partir
+                            de
+                            betteraves
+                            fermentées, offrant des notes terreuses sucrées, idéal pour les entrées audacieuses.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="recto" src="./Images/vin.png" alt="Photo d'une bouteille de vin Rouge Sang de Dragon  ">
+                <div class="verso">
+                    <h3>Rouge Sang de Dragon </h3>
+                    <div class="details">
+                        <div class="description">
+                            Rouge Sang de Dragon : Un vin rouge obtenu à partir de raisins cultivés dans des sols
+                            volcaniques, possédant une
+                            teinte presque noire et des arômes fumés avec une touche minérale, parfait pour accompagner
+                            des
+                            plats robustes.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="recto" src="./Images/vincurc.png"
+                    alt="Photo d'une bouteille de vin Jaune Curcuma & Gingembre ">
+                <div class="verso">
+                    <h3>Jaune Curcuma & Gingembre </h3>
+                    <div class="details">
+                        <div class="description">
+                            Jaune Curcuma & Gingembre : Un vin blanc infusé avec du curcuma et du gingembre, lui donnant
+                            une
+                            couleur dorée et
+                            des saveurs épicées et rafraîchissantes. Idéal pour accompagner des plats exotiques ou
+                            épicés.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-        <div class="card">
-            <img class="recto" src="./Images/burjé.png" alt="Le Burjé est un burger d'exeption">
-            <div class="verso">
-                <h4>Le burgé du boucher</h4>
-                <div class="details">
-                    <div class="description">
-                        Un trésor gastronomique à nul autre pareil vous attend ici,
-                        un joyau de notre cuisine qui transcende les frontières de l'ordinaire.
-                        Laissez-vous envoûter par l'essence de l'excellence culinaire,
-                        où chaque ingrédient a été soigneusement sélectionné et chaque saveur a été méticuleusement
-                        équilibrée pour créer une symphonie gustative inoubliable. Dans l'art de la cuisine, ce plat
-                        incarne l'apogée de la perfection, une expérience gastronomique qui transcende le simple
-                        repas pour devenir une ode à la délectation des sens
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <div class="card">
-            <img class="recto" src="./Images/anaconda.png" alt="Brochette de veau">
-            <div class="verso">
-                <h4>Anaconda de veau</h4>
-                <div class="details">
-                    <div class="description">
-                        Dans notre quête incessante de l'excellence, nous avons découvert une perle rare,
-                        un trésor gastronomique qui repousse les limites de la délectation culinaire.
-                        Ce plat, élaboré avec une passion inégalée et des ingrédients d'une rareté exquise,
-                        incarne l'essence même de l'exception. Chaque bouchée est un voyage sensoriel,
-                        une rencontre avec l'art de la gastronomie à son apogée.
-                        Éveillez vos papilles à une expérience qui transcende les frontières du goût ordinaire,
-                        et laissez-vous emporter par cette symphonie culinaire où l'élégance et l'authenticité
-                        se
-                        marient dans une danse envoûtante.
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-
 
 
 
