--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#aboutus">A propos de nous</a>
                 </li>
                 <li>
-                    <a href="#">Menu</a>
+                    <a href="#menu">Menu</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
@@ -39,7 +39,7 @@
 
             <p class="gm">Guide Michelin, 2023</p>
         </div>
-        <h2 id="aboutus"><img src="./img/ABOUTUS.png"></h2>
+        <div id="aboutus" class="logo-aboutus-container"><img src="./img/ABOUTUS.png"></div>
         <p>
         <div class="slider">
             <div class="slide">
@@ -84,7 +84,7 @@
         </div>
 
         <div>
-            <div class="logo-menu-container">
+            <div id="menu" class="logo-menu-container">
                 <img class="logo-menu" src="./Images/MENU.png" alt="Logo du restaurant" />
             </div>
 
